tests/ui/extern/issue-36122-accessing-externed-dst.stderr
error[E0277]: the size for values of type `[usize]` cannot be known at compilation time
  --> $DIR/issue-36122-accessing-externed-dst.rs:3:9
   |
LL |         static symbol: [usize];
   |         ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[usize]`
   = note: statics and constants must have a statically known size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
